# sendy

./: .gitignore  Readme.md
desktop/: CMakeLists.txt
desktop/include/datenbank/: DatenBank.h
desktop/include/models/: Message.h  Status.h
desktop/include/models/key/: Key.h  KeyPair.h  PrivateKey.h  PublicKey.h
desktop/include/models/peer/: Contact.h  Peer.h  User.h
desktop/include/profiling/: ConsoleLogger.h  FileLogger.h  FrameTimer.h  ILogger.h  LoggerManager.h  ScopeTimer.h  UILogger.h
desktop/include/repositories/: ContactRepo.h  UserRepo.h
desktop/include/ui/: MainWindow.h
desktop/src/: main.cpp
desktop/src/profiling/: ConsoleLogger.cpp  FileLogger.cpp  LoggerManager.cpp  UILogger.cpp
desktop/src/ui/: MainWindow.cpp
